# pico-tft

./: .devcontainer.json  CMakeLists.txt  Readme.md
src/: main.cpp
src/drivers/: elegoo_tft.cpp  elegoo_tft.h  register.h  tft.cpp  tft.h
src/interfaces/: parallel_interface.h  tft_interface.h
src/libs/: colors.h  elegoo_gfx.cpp  elegoo_gfx.h  gfx.cpp  gfx.h  print.cpp  print.h
